--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,11 +62,11 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        
+
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2016</p>
+        <p>&copy; AngieG 2016</p>
       </footer>
 
     </div> <!-- /container -->
