add styling to index page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
-<h1>Let's make money</h1>
+
+<div class="jumbotron">
+  <h1>Invest Your Money</h1>
+  <p>Sign up to start investing.  Look up your favorite companies, keep track of the most current stocks and add friends. Most of all, have fun</p>
+  <%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-lg btn-success" %>
+
+</div>
